# solve-rs

./: Cargo.toml
lib/: Cargo.toml
lib/src/: evaluator.rs  lib.rs  parser.rs  run.rs  types.rs
lib/src/parser/: constants.rs  mappers.rs
src/: cli.rs  main.rs  runners.rs
